using System;

[Serializable]
public class MercenaryUnitData
{
	public MercenaryType MercenaryType;

	public int Level;

	public float Hp;

	public float ReviveTime;

	public float RegenHp;

	public int GuardRange;

	public AttackType AttackType;

	public float Damage;

	public float AttackSpeed;

	public float AttackRange;

	public DamageType DamageType;

	public float DamAoeRange;

	public float MoveSpeed;

	public Mercenary prefab;
}
