using System;

[Serializable]
public class RawEnemy
{
	public string EnemyType;

	public int Level;

	public int Hp;

	public string AttackType;

	public float Damage;

	public float AttackSpeed;

	public float AttackRange;

	public string DamageType;

	public float DamAoeRange;

	public float MoveSpeed;

	public int EXP;
}
