using System;

[Serializable]
public class RawMercenary
{
	public string Mercenary;

	public int Level;

	public float Hp;

	public float RegenHp;

	public float ReviveTime;

	public int GuardRange;

	public string AttackType;

	public float Damage;

	public float AttackSpeed;

	public float AttackRange;

	public string DamageType;

	public float DamAoeRange;

	public float MoveSpeed;
}
