using System;

[Serializable]
public class RawTroop
{
	public string Troop;

	public int Level;

	public float TrainingTime;

	public float Hp;

	public float RegenHp;

	public string AttackType;

	public float Damage;

	public float AttackSpeed;

	public float AttackRange;

	public string DamageType;

	public float DamAoeRange;

	public float MoveSpeed;
}
